Remove unused and mostly bogus size argument from Describe{RefCounted,GCed}Node CC callback
RESOLVED
FIXED
in mozilla18
Status
()
People
(Reporter: mccr8, Assigned: mccr8)
Tracking
(Blocks: 1 bug)
Firefox Tracking Flags
(Not tracked)
Details
Attachments
(2 attachments, 1 obsolete attachment)
22.03 KB,
patch
|
smaug
:
review+
|
Details | Diff | Splinter Review |
1.68 KB,
patch
|
njn
:
review+
|
Details | Diff | Splinter Review |
Comment hidden (empty) |
(Assignee) | ||
Comment 1•7 years ago
|
||
Created attachment 618848 [details] [diff] [review] WIP I should probably remove the renaming I did of the appallingly named "foo" local variable.
Assignee: nobody → continuation
(Assignee) | ||
Comment 2•7 years ago
|
||
Created attachment 655379 [details] [diff] [review] part 1: remove the arguments
Attachment #618848 -
Attachment is obsolete: true
(Assignee) | ||
Comment 3•7 years ago
|
||
Created attachment 655380 [details] [diff] [review] part 2: remove the now unused JSContextSize
(Assignee) | ||
Comment 4•7 years ago
|
||
Comment on attachment 655379 [details] [diff] [review] part 1: remove the arguments Try run looked okay. Kind of a shame we don't have some better way to encapsulate Traverses that want to specify their own name. https://tbpl.mozilla.org/?tree=Try&rev=9dd920702889
Attachment #655379 -
Flags: review?(bugs)
(Assignee) | ||
Comment 5•7 years ago
|
||
Comment on attachment 655380 [details] [diff] [review] part 2: remove the now unused JSContextSize This function was added by Ms2ger to remove jscntxt.h (or whatever) from the exported JS headers, but it isn't needed any more after this patch, so it makes sense to remove it, I think.
Attachment #655380 -
Flags: review?(n.nethercote)
![]() |
||
Updated•7 years ago
|
Attachment #655380 -
Flags: review?(n.nethercote) → review+
Updated•7 years ago
|
Attachment #655379 -
Flags: review?(bugs) → review+
(Assignee) | ||
Comment 6•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/61efc4bbf95b https://hg.mozilla.org/integration/mozilla-inbound/rev/65e30427c102
Comment 7•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/61efc4bbf95b https://hg.mozilla.org/mozilla-central/rev/65e30427c102
Status: NEW → RESOLVED
Last Resolved: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in
before you can comment on or make changes to this bug.