Bug 749366 - Remove mostly bogus size arg from CC callbacks. r=smaug